--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "google-maps-react": "^2.0.6",
+    "jquery": "^3.5.1",
+    "owl.carousel": "^2.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-owl-carousel": "^2.3.1",
+    "react-player": "^2.6.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
